kube/jupyter.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: nbe
  namespace: base
  labels:
    k8s-app: nbe
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8888
      targetPort: 8888
  selector:
    k8s-app: nbe
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nbe
  namespace: base
  labels:
    k8s-app: nbe
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod-nginx
spec:
  tls:
    - hosts:
        - nbe.atlas-ml.org
      secretName: auto-generated-nbe
  rules:
    - host: nbe.atlas-ml.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nbe
                port:
                  number: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nbe
  namespace: base
  labels:
    k8s-app: nbe
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: nbe
  template:
    metadata:
      labels:
        k8s-app: nbe
    spec:
      containers:
        - name: nbe
          image: ivukotic/nbe:latest
          # command: ["jupyter"]
          # args:
          #   [
          #     "lab",
          #     "--LabApp.token='password'",
          #     "--LabApp.ip='0.0.0.0'",
          #     "--LabApp.allow_root=True",
          #   ]
          # command: ["sleep"]
          # args: ["36000"]
          command: ["/runJupyter.sh"]
          ports:
            - containerPort: 8888
          resources:
            requests:
              cpu: "4"
              memory: "4Gi"
            limits:
              cpu: "48"
              memory: "16Gi"
      tolerations:
        - key: "atlas-analytics"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
